[tool.poetry]
name = "buva-qstream"
version = "0.1.0"
description = "A Python library for controlling Buva Q-Stream devices."
authors = ["Geoffrey Mastenbroek <geoffrey@maschel.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "buva_qstream", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
aiohttp = ">=3.13.3,<4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8-pyproject = "^1.2.3"
mypy = "^1.15.0"
flake8-bugbear = "^24.12.12"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
]
ignore = [
    "E203",  # Whitespace before ':'
    "W503",  # Line break before binary operator
    "C901",  # Too complex ( McCabe complexity )
]
per-file-ignores = """
    __init__.py: F401
"""
select = ["E", "W", "F", "C", "B"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
